# news-categorization

./: Makefile  README.md  classification_analysis.ipynb  pyproject.toml
src/: client.py  config.py
src/classifier/: base.py  dbscan.py  kmeans.py  llm.py  models.py
src/comparison/: report.py
src/embedding/: embedding_generator.py
src/feed/: base.py  common.py  constants.py  google.py  models.py
