[project]
name = "news-categorization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "feedparser>=6.0.12",
    "matplotlib>=3.8.0",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.0.0",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
